#20 fix background overflowing

--- a/app/assets/stylesheets/store/_layout.scss
+++ b/app/assets/stylesheets/store/_layout.scss
@@ -63,7 +63,7 @@ body {
 
 #content {
   background: asset-data-url('content-bg.png');
-  overflow-x: hidden;
+  overflow: hidden;
   z-index: 10;
   position: relative;
   padding: 20px;
